roboptim-core (2.0-5) unstable; urgency=low

  * Update symbols for s390x.

 -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 10 Jun 2013 10:28:35 +0900

roboptim-core (2.0-4) unstable; urgency=low

  * Update symbols for amd64 armhf hurd-i386 i386 ia64 kfreebsd-amd64
  kfreebsd-i386 powerpc s390 s390x sparc (Closes: #709113).
  * Update patch to fix gcc-4.8 warnings (Closes: #709742).

 -- Thomas Moulard <thomas.moulard@gmail.com>  Sun, 26 May 2013 22:20:18 +0900

roboptim-core (2.0-3) unstable; urgency=low

  * Update symbols for the following architectures: amd64 armhf i386 ia64
  kfreebsd-amd64 kfreebsd-i386 powerpc s390 s390x sparc

 -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 20 May 2013 18:27:18 +0900

roboptim-core (2.0-2) unstable; urgency=low

  * Fix compilation on 32-bits architecture (Closes: #708604).
  * Remove hardening-wrapper.
  * Update symbols using pkgkde-getbuildlogs and pkgkde-symbolshelper.

 -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 20 May 2013 11:47:44 +0900

roboptim-core (2.0-1) unstable; urgency=low

  * Initial release (Closes: #705014)

 -- Thomas Moulard <thomas.moulard@gmail.com>  Tue, 09 Apr 2013 03:52:11 +0900